Use data attr instead of class for active tab

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <page-header>
     <h1 slot="title">Chapter 6</h1>
-    <li slot="tab-option" class="active">Shop</li>
+    <li slot="tab-option" data-active>Shop</li>
     <li slot="tab-option">Todo List</li>
 </page-header>
 
