Edit project structure

--- a/index.html
+++ b/index.html
@@ -19,9 +19,16 @@
 </page-header>
 
 <main>
+    <section class="shop">
 
+    </section>
+
+    <section class="todo-list">
+
+    </section>
 </main>
 
-<script src="/js/components/PageHeader.js"></script>
+<script defer src="/components/PageHeader.js"></script>
+<script defer type="module" src="/main.js"></script>
 </body>
 </html>
