Make page header deal with anchors

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
 <page-header>
     <h1 slot="title">Chapter 6</h1>
-    <li slot="tab-option" data-active>Shop</li>
-    <li slot="tab-option">Todo List</li>
+    <a slot="nav-link" href="/shop" data-active>Shop</a>
+    <a slot="nav-link" href="/todo">Todo List</a>
 </page-header>
 
 <main>
