Add ProductMenu web component

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 
 <main>
     <section class="shop">
+        <product-menu>
+            <h2 slot="title">Offline Shop</h2>
+        </product-menu>
 
     </section>
 
@@ -29,6 +32,8 @@
 </main>
 
 <script defer src="/components/PageHeader.js"></script>
+<script defer src="/components/ProductMenu.js"></script>
+
 <script defer type="module" src="/main.js"></script>
 </body>
 </html>
